--- a/HyderabadMonuments/src/main/res/layout/fragment_main.xml
+++ b/HyderabadMonuments/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/gridView"
-        android:numColumns="@integer/num_of_columns"/>
+        android:numColumns="@integer/num_of_columns"
+        android:columnWidth="80dp"/>
 
 </RelativeLayout>
