--- a/HyderabadMonuments/src/main/res/layout/fragment_main.xml
+++ b/HyderabadMonuments/src/main/res/layout/fragment_main.xml
@@ -2,17 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     tools:context=".MainActivity$PlaceholderFragment">
 
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/gridView"
-        android:numColumns="@integer/num_of_columns"
-        android:horizontalSpacing="20dp"/>
+        android:numColumns="@integer/num_of_columns"/>
 
 </RelativeLayout>
