--- a/HyderabadMonuments/src/main/res/layout/fragment_second.xml
+++ b/HyderabadMonuments/src/main/res/layout/fragment_second.xml
@@ -1,16 +1,69 @@
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     tools:context=".SecondActivity$PlaceholderFragment">
 
     <TextView
+        android:id="@+id/monumentName"
         android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textSize="30sp"
+        android:layout_marginBottom="5dp"/>
+
+    <LinearLayout
+        android:id="@+id/monumentBox"
+        android:layout_height="150dp"
+        android:layout_width="match_parent"
+        android:layout_below="@id/monumentName">
+        <ImageView
+            android:id="@+id/monumentImage"
+            android:layout_height="150dp"
+            android:layout_width="150dp"
+            android:background="@android:color/holo_red_light"
+            android:layout_marginRight="10dp"/>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:gravity="center">
+            <Button
+                android:id="@+id/directionsButton"
+                android:text="Get directions"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/>
+
+            <Button
+                android:id="@+id/viewOnMapButton"
+                android:text="View on Map"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/>
+            </LinearLayout>
+        </LinearLayout>
+
+
+    <TextView
+        android:layout_below="@id/monumentBox"
+        android:id="@+id/description"
+        android:text="Description"
+        android:textSize="30sp"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent" />
+
+    <TextView
+            android:layout_below="@id/description"
+            android:id="@+id/monumentDescription"
+            android:text="@string/sample_text"
+            android:textSize="20sp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"/>
 
 </RelativeLayout>
