--- a/HyderabadMonuments/src/main/res/layout/activity_map.xml
+++ b/HyderabadMonuments/src/main/res/layout/activity_map.xml
@@ -1,7 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    tools:context="com.artifex.hyderabadmonuments.MapActivity"
-    tools:ignore="MergeRootFrame" />
+    android:layout_width="match_parent"
+    />
