--- a/HyderabadMonuments/src/main/res/layout/fragment_second.xml
+++ b/HyderabadMonuments/src/main/res/layout/fragment_second.xml
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textSize="30sp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="5dp"
+        android:textColor="@android:color/white"/>
 
     <LinearLayout
         android:id="@+id/monumentBox"
@@ -39,13 +40,15 @@
                 android:id="@+id/directionsButton"
                 android:text="Get directions"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:background="@android:color/white"/>
 
             <Button
                 android:id="@+id/viewOnMapButton"
                 android:text="View on Map"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:background="@android:color/white"/>
             </LinearLayout>
         </LinearLayout>
 
@@ -56,7 +59,8 @@
         android:text="Description"
         android:textSize="30sp"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
+        android:layout_width="match_parent"
+        android:textColor="@android:color/white"/>
 
     <TextView
             android:layout_below="@id/description"
@@ -64,6 +68,7 @@
             android:text="@string/sample_text"
             android:textSize="20sp"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"/>
+            android:layout_width="match_parent"
+        android:textColor="@android:color/white"/>
 
 </RelativeLayout>
