--- a/HyderabadMonuments/src/main/res/values/styles.xml
+++ b/HyderabadMonuments/src/main/res/values/styles.xml
@@ -3,6 +3,11 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:actionBarStyle">@style/ActionBarTheme</item>
+    </style>
+
+    <style name="ActionBarTheme" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/action_bar_color</item>
     </style>
 
 </resources>
